--- a/pom.xml
+++ b/pom.xml
@@ -45,13 +45,14 @@
             <artifactId>hadoop-client</artifactId>
             <version>${hadoopVersion}</version>
         </dependency>
+
         <!-- Hadoop -->
         <dependency>
             <groupId>jdk.tools</groupId>
             <artifactId>jdk.tools</artifactId>
             <version>1.8</version>
             <scope>system</scope>
-            <systemPath>/usr/local/jdk1.8.0_221/lib/tools.jar</systemPath>
+            <systemPath>C:/Program Files/Java/jdk1.8.0_211/lib/tools.jar</systemPath>
         </dependency>
         <!-- https://mvnrepository.com/artifact/junit/junit -->
         <dependency>
